# games-api

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
games/: models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py
games_api_project/: .env  asgi.py  settings.py  urls.py  wsgi.py
